# intmax2-node

./: .clang-format  .dockerignore  .env.example  .gitignore  .golangci.yml  Makefile  README.md  buf.work.yaml  go.mod  go.sum  log2
cmd/: main.go
cmd/balance_checker/: balance_checker.go  blockchain_service.go  cmd_balance_get.go  cmd_balance_get_token.go  commands.go
cmd/balance_synchronizer/: balance_synchronizer.go  block_post_service.go  block_synchronizer.go  blockchain_service.go  data_store_vault.go  db_app.go
cmd/block_builder/: block_builder.go  block_builder_registry_service.go  blockchain_service.go  cmd_block_builder_info.go  cmd_block_builder_stop.go  cmd_block_builder_unstake.go
cmd/block_validity_prover/: block_post_service.go  block_synchronizer.go  block_validity_prover.go  block_validity_service.go  blockchain_service.go  cmd_block_validity_prover.go  cmd_block_validity_prover_run.go  db_app.go  deposit_synchronizer.go
cmd/block_validity_synchronizer/: block_validity_synchronizer.go  blockchain_service.go  data_store_vault.go  db_app.go
configs/: api.go  app.go  balance_validity_prover.go  block_post_service.go  block_validity_prover.go  blockchain.go  configs.go  deposit_synchronizer.go  gas_price_oracle.go  grpc.go  http.go  l2BatchIndex.go  log.go  network.go  open_telemetry.go  pow.go  sql_db.go  stun_server.go  swagger.go  wallet.go  withdrawal_service.go  worker.go
prover/private-balance-validity-prover/: .env.example  .gitignore  Cargo.toml  README.md  config.toml
prover/private-balance-validity-prover/data/: balance_update_for_send_witness_0xc2c45b592d56f14cb8574e4a90392bf50b81ad73dc31a9203c240cad74d7a491.json  receive_deposit_witness_0xfe016b28057ea074001cc9ce16e323d47e7608791a4d102ce6d8283683decb63.json  send_witness_0x395a3add5dea1151b6ffaf3b532d9a4ae0337d3c8f33d80140c1daf6d7b2084e.json
prover/private-balance-validity-prover/src/: main.rs
prover/private-balance-validity-prover/src/app/: encode.rs  interface.rs  route.rs  state.rs
prover/private-balance-validity-prover/src/proof/: mod.rs  serializer.rs
prover/private-balance-validity-prover/src/server/: health.rs
prover/private-balance-validity-prover/src/server/prover/: deposit_transition.rs  mod.rs  send_transition.rs  transfer_transition.rs
prover/withdrawal-aggregator/: .env.example  Cargo.toml  README.md
prover/withdrawal-aggregator-prover/: .gitignore  Cargo.toml  README.md
prover/withdrawal-aggregator-prover/data/: prev_withdrawal_proof.json  withdrawal_witness_0x96da320fa4cd5e2f5d17f85e58e6e394f8c4b87cbb93e2af1fed50451094d8fd.json
prover/withdrawal-aggregator-prover/examples/: build_circuit.rs
prover/withdrawal-aggregator-prover/src/app/: encode.rs  interface.rs  mod.rs  state.rs
prover/withdrawal-aggregator-prover/src/proof/: mod.rs
prover/withdrawal-aggregator-prover/src/server/: health.rs
prover/withdrawal-aggregator-prover/src/server/prover/: mod.rs  withdrawal.rs  wrapper.rs
prover/withdrawal-aggregator/data/: withdrawal_witness_0x436d3f984fe2d267a6cf8bec2cd062473dd56cec08540115c430474c25f9be4e.json
prover/withdrawal-aggregator/src/: main.rs
prover/withdrawal-aggregator/src/app/: encode.rs  interface.rs  mod.rs  route.rs  state.rs
prover/withdrawal-aggregator/src/proof/: mod.rs
prover/withdrawal-aggregator/src/server/: health.rs  prover.rs
prover/withdrawal-aggregator/src/server/prover/: withdrawal.rs  wrapper.rs
(+1167 files in other folders)
