[package]
name = "actix-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4.4"
serde = "1.0.188"
serde_json = "1.0.105"
actix-rt = "2.9.0"
config = "0.13.3"
dotenv = "0.15.0"
once_cell = "1.18.0"
actix-web-validator = "5.0.1"
rand = "0.8.5"

[dependencies.validator]
version = "0.16.1"
features = ["derive"]

[dependencies.redis]
version = "0.24"
default-features = false
features = ["tokio-comp", "connection-manager"]